[tool.poetry]
name = "pyenv_tool"
version = "0.1.0"
description = "Convienience wrapper for common pyenv operations."
authors = ["Matthew Wyant <me@matthewwyant.com>"]
license = "GPL-3.0-plus"

# https://pypi.org/classifiers/
classifiers = [
    # "Development Status :: 1 - Planning",
    # "Development Status :: 2 - Pre-Alpha",
    # "Development Status :: 3 - Alpha",
    "Development Status :: 4 - Beta",
    # "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # "Operating System :: Unix",
    # "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    # "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3 :: 3.10",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]


[tool.poetry.scripts]
pyenvtool = 'pyenv_tool.__main__:cli_main'
pyenv_tool = 'pyenv_tool.__main__:cli_main' # Legacy alias

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.7"
rich = "^13.6.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
mypy = "^1.6.0"
pytest = "^7.4.2"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
ruff = "^0.0.292"

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "ANN101",
    "ANN102",
    "D400",
    "D406",
    "D407",
    "PLC1901",
    "UP035",
]
unfixable = ["F401", "F841"]

# good-names-rgxs = ["^[a-z_][a-z]?"]
# no-docstring-rgx = "^_|[Tt]est|[Mm]ock"

[tool.ruff.per-file-ignores]
"test_*.py" = ["D103"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
