[tool.poetry]
name = "pyenvtool"
version = "1.0.0"
description = "Convienience wrapper for common pyenv operations."
authors = ["Matthew Wyant <me@matthewwyant.com>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/therealzanfar/pyenvtool"

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    # "Development Status :: 6 - Mature",
    # "Development Status :: 7 - Inactive",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    # "Operating System :: Unix",
    # "Operating System :: POSIX",
    # "Operating System :: Microsoft :: Windows",
    # "Operating System :: MacOS",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Utilities",
]


[tool.poetry.scripts]
pyenvtool = 'pyenvtool.__main__:cli_main'

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
rich = "^13.7.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.2"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
mypy = "^1.7.1"
pytest = "^7.4.3"
pytest-mock = "^3.12.0"
requests-mock = "^1.11.0"
ruff = "^0.1.6"
types-requests = "^2.31.0.10"
types-beautifulsoup4 = "^4.12.0.7"

[tool.ruff]
select = [
    "F",
    "E",
    "W",
    "C90",
    "I",
    "N",
    "D",
    "UP",
    "YTT",
    "ANN",
    "B",
    "A",
    "COM",
    "C4",
    "DTZ",
    "ISC",
    "ICN",
    "INP",
    "PIE",
    "PT",
    "RET",
    "SIM",
    "TID",
    "ARG",
    "PLC",
    "PLE",
    "PLR",
    "PLW",
    "RUF",
]
ignore = [
    "D105",
    "D107",
    "D203",
    "D212",
    "UP006",
    "UP007",
    "ANN101",
    "ANN102",
    "D400",
    "D406",
    "D407",
    "UP035",
]
unfixable = ["F401", "F841"]

# good-names-rgxs = ["^[a-z_][a-z]?"]
# no-docstring-rgx = "^_|[Tt]est|[Mm]ock"

[tool.ruff.per-file-ignores]
"test_*.py" = ["D103"]

[tool.ruff.pyupgrade]
keep-runtime-typing = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
